# MovieApp

./: .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  install_docker_ubuntu.sh
backend/: .dockerignore  Dockerfile  alembic.ini  config.py  databse.py  models.py  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  security.py  utils.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 515048191ce7_movie_and_related_tables.py  64af06ff0e78_add_thumbnail_to_movie.py  7f22db3f141a_cascade_delete_on_junction_tables.py  8a5d93e7bfc6_add_user_table.py
backend/app/routes/: login.py  movies.py
backend/migrations/versions/: 35ce7cbe531e_add_junction_tables.py  8f5355118603_create_movie_and_director_tables.py  ae6d823d7d07_add_genre_table.py  fb5df022e6b8_add_actor_table.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/router/: index.js
frontend/src/views/: AdminPage.vue  HomeView.vue  MoviePage.vue
